--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
   <section id="sobre">
     <h2>Sobre Nós</h2>
     <p>A Ecoxbras é uma empresa especializada em soluções ambientais com foco em drenagem urbana sustentável, oferecendo serviços inovadores e eficientes para combater os alagamentos e promover o desenvolvimento urbano consciente.</p>
+    <h2>Visão</h2>
+    <p>Ser referência em inovação ambiental para centros urbanos, criando cidades mais verdes, inteligentes e resilientes.</p>
   </section>
 
   <section id="servicos">
@@ -99,7 +101,7 @@
     <div class="grid">
       <div class="card">
         <h3>Projetos de Drenagem</h3>
-        <p>Elaboração de projetos de drenagem urbana com técnicas modernas e sustentáveis.</p>
+        <p>Elaboração de projetos de drenagem urbana com técnicas modernas, sustentáveis e inovadoras.</p>
       </div>
       <div class="card">
         <h3>Pavimentação Permeável</h3>
