Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </div>
       <div class="card">
         <h3>Pavimentação Permeável</h3>
-        <p>Implantação de pavimentos que permitem a infiltração da água, reduzindo alagamentos.</p>
+        <p>Implantação de pavimentos que permite a passagem de água e ar através de seu material, tendo um impacto ambiental positivo ao ajudar na prevenção das enchentes, redução das ilhas de calor.</p>
       </div>
       <div class="card">
         <h3>Educação Ambiental</h3>
@@ -119,7 +119,7 @@
     <div class="grid">
       <div class="card">
         <img src="https://images.unsplash.com/photo-1615840388043-b2d508b754e8" alt="Projeto 1">
-        <p>Modelo de maquete com caixa de retenção e pavimento permeável no Setor Pedro Ludovico.</p>
+        <p>Projetos de sistemas pluviais modernos para conter enchentes em pontos de alagamentos em Goiânia-Go.</p>
       </div>
       <div class="card">
         <img src="https://images.unsplash.com/photo-1617006520070-f55f31bb5f3c" alt="Projeto 2">
