Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 </head>
 <body>
   <header>
-    <h1>Ecoxbras</h1>
+    <h1>EcoXbras</h1>
     <p>Soluções sustentáveis para um futuro melhor</p>
   </header>
   <nav>
