--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     }
     header {
       background-color: #2e7d32;
-      color: white;
+      color: black;
       padding: 2rem;
       text-align: center;
     }
