--- a/index.html
+++ b/index.html
@@ -91,11 +91,13 @@
 
   <section id="sobre">
     <h2>Sobre Nós</h2>
+    <div class="grid">
     <p>A Ecoxbras é uma empresa especializada em soluções ambientais com foco em drenagem urbana sustentável, oferecendo serviços inovadores e eficientes para combater os alagamentos e promover o desenvolvimento urbano consciente.</p>
     <h2>Visão</h2>
     <p>Ser referência em inovação ambiental para centros urbanos, criando cidades mais verdes, inteligentes e resilientes.</p>
     <h2>Missão</h2>
     <p>Desenvolver soluções urbanas sustentáveis que melhorem a qualidade de vida nas cidades, promovendo o equilíbrio entre desenvolvimento urbano e preservação ambiental..</p>
+      </div>
   </section>
 
   <section id="servicos">
