--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
   <nav>
     <a href="#sobre">Sobre</a>
     <a href="#servicos">Serviços</a>
+    <a href="#sobre">Alagamentos</a>
+    <a href="#sobre">Soluções</a>
     <a href="#projetos">Projetos</a>
     <a href="#contato">Contato</a>
   </nav>
@@ -92,12 +94,19 @@
   <section id="sobre">
     <h2>Sobre Nós</h2>
     <div class="grid">
-    <p>A Ecoxbras é uma empresa especializada em soluções ambientais com foco em drenagem urbana sustentável, oferecendo serviços inovadores e eficientes para combater os alagamentos e promover o desenvolvimento urbano consciente.</p>
-    <h2>Visão</h2>
-    <p>Ser referência em inovação ambiental para centros urbanos, criando cidades mais verdes, inteligentes e resilientes.</p>
-    <h2>Missão</h2>
-    <p>Desenvolver soluções urbanas sustentáveis que melhorem a qualidade de vida nas cidades, promovendo o equilíbrio entre desenvolvimento urbano e preservação ambiental..</p>
-      </div>
+     <div class="card">
+      <h3>Sobre</h3>
+      <p>A Ecoxbras é uma empresa especializada em soluções ambientais com foco em drenagem urbana sustentável, oferecendo serviços inovadores e eficientes para combater os alagamentos e promover o desenvolvimento urbano consciente.</p>
+    </div>
+    <div class="card">
+      <h3>Visão</h3>
+      <p>Ser referência em inovação ambiental para centros urbanos, criando cidades mais verdes, inteligentes e resilientes.</p>
+   </div>
+   <div class="card">
+      <h3>Missão</h3>
+      <p>Desenvolver soluções urbanas sustentáveis que melhorem a qualidade de vida nas cidades, promovendo o equilíbrio entre desenvolvimento urbano e preservação ambiental..</p>
+   </div>
+   </div>
   </section>
 
   <section id="servicos">
