--- a/index.html
+++ b/index.html
@@ -104,11 +104,30 @@
    </div>
    <div class="card">
       <h3>Missão</h3>
-      <p>Desenvolver soluções urbanas sustentáveis que melhorem a qualidade de vida nas cidades, promovendo o equilíbrio entre desenvolvimento urbano e preservação ambiental..</p>
+      <p>Desenvolver soluções urbanas sustentáveis que melhorem a qualidade de vida nas cidades, promovendo o equilíbrio entre desenvolvimento urbano e preservação ambiental.</p>
    </div>
    </div>
   </section>
 
+  <section id="Alagamentos">
+    <h2>Alagamentos e Inundações</h2>
+    <div class="grid">
+     <div class="card">
+      <h3>Problema</h3>
+      <p>Os alagamentos e inundações são fenômenos recorrentes em áreas urbanas e rurais, provocando diversos transtornos, como: Danos à infraestrutura urbana, Prejuízos materiais e financeiros à população, Comprometimento da mobilidade urbana, Riscos à saúde pública,Perda de vidas humanas em casos mais severos.</p>
+    </div>
+    <div class="card">
+      <h3>Causas</h3>
+      <p>Urbanização desordenada.</p>
+      <p>Deficiência no sistema de drenagem urbana.</p>
+      <p>Assoreamento de rios e canais.</p>
+      <p>Desmatamento e perda de vegetação.</p>
+      <p>Chuvas intensas e eventos extremos.</p>
+      <p>Descaso com a manutenção urbana.</p>
+    </div>
+    </div>
+  </section>
+  
   <section id="servicos">
     <h2>Serviços</h2>
     <div class="grid">
