--- a/index.html
+++ b/index.html
@@ -114,16 +114,21 @@
     <div class="grid">
      <div class="card">
       <h3>Problema</h3>
-      <p>Os alagamentos e inundações são fenômenos recorrentes em áreas urbanas e rurais, provocando diversos transtornos, como: Danos à infraestrutura urbana, Prejuízos materiais e financeiros à população, Comprometimento da mobilidade urbana, Riscos à saúde pública,Perda de vidas humanas em casos mais severos.</p>
+      <p>Os alagamentos e inundações são fenômenos recorrentes em áreas urbanas e rurais, provocando diversos transtornos, como:</p> 
+      <p>-Danos à infraestrutura urbana</p>
+      <p>-Prejuízos materiais e financeiros à população</p>
+      <p>-Comprometimento da mobilidade urbana</p>
+      <p>-Riscos à saúde pública.</p>
+      <p>-Perda de vidas humanas em casos mais severos.</p>
     </div>
     <div class="card">
       <h3>Causas</h3>
-      <p>Urbanização desordenada.</p>
-      <p>Deficiência no sistema de drenagem urbana.</p>
-      <p>Assoreamento de rios e canais.</p>
-      <p>Desmatamento e perda de vegetação.</p>
-      <p>Chuvas intensas e eventos extremos.</p>
-      <p>Descaso com a manutenção urbana.</p>
+      <p>-Urbanização desordenada.</p>
+      <p>-Deficiência no sistema de drenagem urbana.</p>
+      <p>-Assoreamento de rios e canais.</p>
+      <p>-Desmatamento e perda de vegetação.</p>
+      <p>-Chuvas intensas e eventos extremos.</p>
+      <p>-Descaso com a manutenção urbana.</p>
     </div>
     </div>
   </section>
