--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 </head>
 <body>
   <header>
-    <img src="images/logo.png" alt="Logo da Ecoxbras">
+    <img src="imagens/logo.png" alt="Logo da Ecoxbras">
     <p>Soluções sustentáveis para um futuro melhor</p>
   </header>
   <nav>
