--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       padding: 2rem;
     }
     .hero {
-      background-image: url('https://images.unsplash.com/photo-1505842465776-3b4953ca4f61');
+      background-image: src="imagens/drenagem.png" alt="Logo da Ecoxbras">;
       background-size: cover;
       background-position: center;
       padding: 6rem 2rem;
@@ -132,6 +132,21 @@
     </div>
     </div>
   </section>
+
+   <section id="Soluções">
+    <h2>Soluções</h2>
+    <div class="grid">
+     <div class="card">
+      <h3>Soluções</h3>
+      <p>-Pavimentação Permeável</p> 
+      <p>-Caixas de Retenção/Subterrâneas</p>
+      <p>-Jardins de Chuva (Bacias de Biorretenção)</p>
+      <p>-Canteiros Verdes e Telhados Verdes</p>
+      <p>-Drenos de Tempestade com Indicadores de Nível (LED)</p>
+      <p>-Educação Ambiental e Planejamento Urbano Integrado.</p>
+    </div>
+    </div>
+  </section>
   
   <section id="servicos">
     <h2>Serviços</h2>
@@ -155,12 +170,12 @@
     <h2>Projetos Recentes</h2>
     <div class="grid">
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1615840388043-b2d508b754e8" alt="Projeto 1">
+        <img src="imagens/projeto1.png" alt="Projeto 1">
         <p>Projetos de sistemas pluviais modernos para conter enchentes em pontos de alagamentos em Goiânia-Go.</p>
       </div>
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1617006520070-f55f31bb5f3c" alt="Projeto 2">
-        <p>Simulação de chuva com mini bomba para estudo de escoamento pluvial.</p>
+        <img src="imagens/projeto2.png" alt="Projeto 2">
+        <p>Promove a conscientização ambiental por meio de práticas educativas participativas, desenvolvendo senso crítico, responsabilidade socioambiental e protagonismo ecológico.</p>
       </div>
     </div>
   </section>
