--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       padding: 2rem;
     }
     .hero {
-      background-image: src="imagens/drenagem.png" alt="Logo da Ecoxbras">;
+      background-image: src="imagens/drenagem.png" alt="Drenagem">;
       background-size: cover;
       background-position: center;
       padding: 6rem 2rem;
@@ -80,8 +80,8 @@
   <nav>
     <a href="#sobre">Sobre</a>
     <a href="#servicos">Serviços</a>
-    <a href="#sobre">Alagamentos</a>
-    <a href="#sobre">Soluções</a>
+    <a href="#alagamentos">Alagamentos</a>
+    <a href="#soluções">Soluções</a>
     <a href="#projetos">Projetos</a>
     <a href="#contato">Contato</a>
   </nav>
@@ -109,7 +109,7 @@
    </div>
   </section>
 
-  <section id="Alagamentos">
+  <section id="alagamentos">
     <h2>Alagamentos e Inundações</h2>
     <div class="grid">
      <div class="card">
@@ -133,7 +133,7 @@
     </div>
   </section>
 
-   <section id="Soluções">
+   <section id="soluções">
     <h2>Soluções</h2>
     <div class="grid">
      <div class="card">
