--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       padding: 2rem;
     }
     .hero {
-      background-image: src="imagens/drenagem.png" alt="Drenagem">;
+      background-image: <img src="imagens/drenagem.png" alt="Drenagem">;
       background-size: cover;
       background-position: center;
       padding: 6rem 2rem;
